Resize type icons

--- a/core/designsystem/src/main/res/drawable/type_dark.xml
+++ b/core/designsystem/src/main/res/drawable/type_dark.xml
@@ -1,5 +1,9 @@
-<vector android:height="48dp" android:viewportHeight="58"
-    android:viewportWidth="58" android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/type_dark" android:pathData="M29,14.36a14.47,14.47 0,0 0,-4.67 0.77,14.53 14.53,0 0,1 0,27.74 14.47,14.47 0,0 0,4.67 0.77,14.64 14.64,0 0,0 0,-29.28Z"/>
-    <path android:fillColor="@color/type_dark" android:pathData="M29,0.78A28.22,28.22 0,1 0,57.22 29,28.21 28.21,0 0,0 29,0.78ZM29,47.23A18.23,18.23 0,1 1,47.23 29,18.23 18.23,0 0,1 29,47.23Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M12,3C10.22,3 8.48,3.528 7,4.517C5.52,5.506 4.366,6.911 3.685,8.556C3.004,10.2 2.826,12.01 3.173,13.756C3.52,15.502 4.377,17.105 5.636,18.364C6.895,19.623 8.498,20.48 10.244,20.827C11.99,21.174 13.8,20.996 15.444,20.315C17.089,19.634 18.494,18.48 19.483,17C20.472,15.52 21,13.78 21,12C21,9.613 20.052,7.324 18.364,5.636C16.676,3.948 14.387,3 12,3ZM12,19.228C11.216,19.228 10.437,19.1 9.694,18.847C11.154,18.392 12.43,17.482 13.336,16.25C14.242,15.018 14.73,13.529 14.73,12C14.73,10.471 14.242,8.982 13.336,7.75C12.43,6.518 11.154,5.608 9.694,5.153C10.437,4.9 11.216,4.772 12,4.772C13.917,4.772 15.755,5.534 17.111,6.889C18.466,8.245 19.228,10.083 19.228,12C19.228,13.917 18.466,15.755 17.111,17.111C15.755,18.466 13.917,19.228 12,19.228Z"
+      android:fillColor="@color/type_dark"/>
 </vector>
