--- a/core/designsystem/src/main/res/drawable/type_water.xml
+++ b/core/designsystem/src/main/res/drawable/type_water.xml
@@ -1,5 +1,9 @@
-<vector android:height="48dp" android:viewportHeight="58"
-    android:viewportWidth="58" android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/type_water" android:pathData="M29,0.78A28.22,28.22 0,1 0,57.22 29,28.21 28.21,0 0,0 29,0.78ZM29,47.49a13,13 0,0 1,-12.95 -13c0,-11.36 13,-24 13,-24s13,12.67 13,24A13,13 0,0 1,29 47.49Z"/>
-    <path android:fillColor="@color/type_water" android:pathData="M23.32,30.74a7.37,7.37 0,1 0,12 8.2,7.13 7.13,0 0,0 0.64,-2.3 7.31,7.31 0,0 1,-12.65 -5.9Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M12,2C12,2 4,8.858 4,14.991C4,16.85 4.843,18.632 6.343,19.947C7.843,21.261 9.878,22 12,22C14.122,22 16.156,21.261 17.657,19.947C19.157,18.632 20,16.85 20,14.991C20.031,8.858 12,2 12,2ZM15.91,17.388C15.633,17.915 15.228,18.383 14.723,18.758C14.219,19.134 13.627,19.408 12.989,19.563C12.351,19.717 11.682,19.748 11.028,19.653C10.375,19.558 9.754,19.339 9.207,19.011C8.661,18.684 8.202,18.256 7.863,17.758C7.525,17.259 7.314,16.702 7.247,16.125C7.179,15.548 7.256,14.965 7.472,14.417C7.688,13.868 8.038,13.368 8.497,12.95C8.364,13.788 8.542,14.642 9.004,15.386C9.466,16.129 10.188,16.724 11.064,17.081C11.94,17.438 12.924,17.54 13.87,17.371C14.817,17.203 15.677,16.772 16.324,16.143C16.267,16.576 16.128,16.997 15.91,17.388Z"
+      android:fillColor="@color/type_water"/>
 </vector>
