--- a/core/designsystem/src/main/res/drawable/type_electric.xml
+++ b/core/designsystem/src/main/res/drawable/type_electric.xml
@@ -1,4 +1,9 @@
-<vector android:height="48dp" android:viewportHeight="58"
-    android:viewportWidth="58" android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/type_electric" android:pathData="M29,0.78A28.22,28.22 0,1 0,57.22 29,28.21 28.21,0 0,0 29,0.78ZM36.33,47.9 L13.92,24.57H24.31l-4.88,-11h14.7L40,32.74H31.74Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M17.749,22L4,8.408H10.374L7.38,2H16.399L20,13.168H14.932L17.749,22Z"
+      android:fillColor="@color/type_electric"/>
 </vector>
