--- a/core/designsystem/src/main/res/drawable/type_rock.xml
+++ b/core/designsystem/src/main/res/drawable/type_rock.xml
@@ -1,4 +1,9 @@
-<vector android:height="48dp" android:viewportHeight="58"
-    android:viewportWidth="58" android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/type_rock" android:pathData="M29,57.22A28.22,28.22 0,1 0,0.78 29,28.21 28.21,0 0,0 29,57.22ZM33.53,45.75L21.4,41.82l14,-9.36 4.34,6.13ZM47.61,29.47l-6,7 -4.29,-6.06 5.94,-15C43.29,15.38 47.61,29.47 47.61,29.47ZM23.49,15.38c0.55,0.09 11.33,0 16.76,0L34.61,29.66 18.05,40.73l-6.44,-2.08 -1.22,-9.18Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M14.434,20L7.916,17.93L15.439,12.998L17.771,16.228L14.434,20ZM22,11.423L18.776,15.111L16.471,11.918L19.663,4.016C19.679,4 22,11.423 22,11.423ZM9.039,4C9.335,4.047 15.127,4 18.045,4L15.014,11.523L6.116,17.355L2.656,16.26L2,11.423L9.039,4Z"
+      android:fillColor="@color/type_rock"/>
 </vector>
